fix: readability of code

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
 code {
   font-family: 'JetBrains Mono', monospace;
-  color: #f978af;
+  color: #Fb3c91;
 }
 
 a {
